- new parameter delaypresol for constraint handlers
- new possible result SCIP_DELAYED for EXEC method of presolvers and PRESOL method of constraint handlers

plugins:
- new implementation of the feasibility pump heuristic by Timo Berthold (replaces old implementation);
  old implementation is now called "objfeaspump"; parameter names have been changed accordingly

parameters:
- new parameters lp/cleanupcolsroot and lp/cleanuprowsroot to distinguish cleanup settings between root node and other
  nodes
- new parameters heuristics/fixandinfer/proprounds and heuristics/fixandinfer/minfixings
- default frequency offset of fracdiving heuristic changed to 3
- default frequency offset of (new) feaspump heuristic changed to 0
- default frequency offset of objfeaspump heuristic changed to 8
- changed default priority of primal heuristics
- renamed parameter limits/sol to limits/solutions
- changed default check priority of knapsack constraint handler to -600000
- new parameters presolving/.../delay
- new parameters constraints/.../delaypresol

features:
- aging and cleanup now only remove non-basic columns and basic rows, s.t. resolving can be applied with 0 simplex
  iterations
- calling SCIPaddCut() with forcecut=TRUE will add the cut to the LP even if it is redundant
- command line history in interactive shell now only stores "useful" commands
- new plugin: Probing Presolver
- probing is now also possible in presolving stage
- it is now possible to create subnodes in probing and use backtracking to undo probing changes
- it is now possible to interrupt and continue presolving
- bounds of variables are included in the feasibility checks for solutions

fixed bugs:
- fixed bug in MPS file reader
- fixed bugs in separation store with single coefficient cuts that are converted into bound changes
- at least one cut per separation round is added to the LP to avoid cycling, even if the cut is redundant