@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_rootsoldiving.c,v 1.11 2005/02/07 14:08:23 bzfpfend Exp $"
+#pragma ident "@(#) $Id: heur_rootsoldiving.c,v 1.12 2005/02/08 09:17:05 bzfpfend Exp $"
 
 /**@file   heur_rootsoldiving.c
  * @brief  LP diving heuristic that changes variable's objective values using root LP solution as guide
@@ -159,7 +159,6 @@ DECL_HEUREXEC(heurExecRootsoldiving) /*lint --e{715}*/
    Bool lperror;          
    Longint nsolsfound;
    Longint ncalls;
-   Longint iter;
    Longint nlpiterations; 
    Longint maxnlpiterations;
    int depth;       
@@ -200,7 +199,7 @@ DECL_HEUREXEC(heurExecRootsoldiving) /*lint --e{715}*/
       return SCIP_OKAY;
 
    /* calculate the maximal number of LP iterations until heuristic is aborted */
-   nlpiterations = SCIPgetNLPIterations(scip);
+   nlpiterations = SCIPgetNNodeLPIterations(scip);
    ncalls = SCIPheurGetNCalls(heur);
    nsolsfound = SCIPheurGetNSolsFound(heur);
    maxnlpiterations = (1.0 + 10.0*(nsolsfound+1.0)/(ncalls+1.0)) * heurdata->maxlpiterquot * (nlpiterations + 10000);
@@ -361,17 +360,16 @@ DECL_HEUREXEC(heurExecRootsoldiving) /*lint --e{715}*/
       }
 
       /* resolve the diving LP */
+      nlpiterations = SCIPgetNLPIterations(scip);
       CHECK_OKAY( SCIPsolveDiveLP(scip, maxnlpiterations, &lperror) );
       if( lperror )
          break;
 
       /* update iteration count */
-      iter = SCIPgetNLPIterations(scip);
-      heurdata->nlpiterations += iter - nlpiterations;
-      nlpiterations = SCIPgetNLPIterations(scip);
+      heurdata->nlpiterations += SCIPgetNLPIterations(scip) - nlpiterations;
 
       /* if no LP iterations were performed, we stayed at the same solution -> count this cycling */
-      if( iter == nlpiterations )
+      if( SCIPgetNLPIterations(scip) == nlpiterations )
          ncycles++;
       else
          ncycles = 0;
